Fix missalign

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 ul {
     display: flex;
     position: absolute;
-    transform: translate(-50%);
+    transform: translate(-54.5%);
 }
 
 ul li {
